# mlir-start

./: .gitignore  README.md  log.md  mini_ptq.py  model_transform.md  model_transform.py  top_canonicalize.py  top_fuse.py  week1.md
docs/: project_structure.md
docs/archive/: roadmap_archived.md  week1_archived.md
docs/notes/: day4_calibration.md  day5_quant_eval.md  day6_error_analysis.md
experiments/01_mini_top_import/: yolov5s_mini_top.mlir  yolov5s_mini_top_after_passes.mlir
experiments/01_mini_top_import/runner_inputs/: inputs.txt
experiments/01_mini_top_import/weights_npy/: model.0.conv.bias.npy  model.0.conv.weight.npy  model.1.conv.bias.npy  model.1.conv.weight.npy  model.10.conv.bias.npy  (+114 more)
experiments/01_onnx_to_mlir/: yolov5s.mlir  yolov5s_canonical.mlir  yolov5s_fused.mlir
experiments/02_quant/: yolov5s_mini_cali_table.json  yolov5s_mini_ptq_report.json  yolov5s_mini_ptq_summary.md
experiments/04_mini_top_import/: yolov5s_mini_top.mlir  yolov5s_mini_top_after_passes.mlir
legacy_python_frontend/: README.md  model_transform.md  model_transform.py  top_run.py
mlir_native/: CMakeLists.txt  README.md
mlir_native/cuda/: conv_silu_kernel.cu
mlir_native/examples/: conv_silu_pattern.mlir  layout_patterns.mlir  silu_pattern.mlir
mlir_native/include/: CMakeLists.txt
mlir_native/python/: onnx_to_mini_top.py  prepare_npy_inputs.py
mlir_native/scripts/: build_cuda_kernels.sh  run_onnx_to_mini_top.sh  with_mlir_python_env.sh
mlir_native/tools/: CMakeLists.txt
mlir_native/tools/mini-top-opt/: CMakeLists.txt  mini-top-opt.cpp
(+19 files in other folders)
